grammar.js
    source_file: ($) =>
      seq(
        optional($.module_declaration),
        repeat($.import_declaration),
        repeat($._top_declaration),
      ),

    import_declaration: ($) =>
      seq(
        "import",
        $.import_path,
        optional(
          choice(
            seq("as", $.identifier),
            // selective import: import mod.{ Name, helper }
            seq(
              ".",
              "{",
              seq($._import_name, repeat(seq(",", $._import_name))),
              optional(","),
              "}",
            ),
          ),
        ),
      ),

    _import_name: ($) => choice($.identifier, $.type_name),

    import_path: ($) => seq($.identifier, repeat(seq(".", $.identifier))),

    _top_declaration: ($) =>
      choice(
        $.function_declaration,
        $.type_declaration,
        $.protocol_declaration,
        $.test_declaration,
        $.top_let_declaration,
        $.strict_declaration,
      ),

    // Top-level let binding (constants) — name can be lowercase or UPPERCASE
    top_let_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        choice("let", "var"),
        choice($.identifier, $.type_name),
        optional(seq(":", $._type_expr)),
        "=",
        $.expression,
      ),

    // strict mode directive: `strict total`
    strict_declaration: ($) => seq("strict", $.identifier),

    // @name or @name(args) — @extern(...), @intrinsic("..."), @export(...),
    // @inline_rust, ...
    attribute: ($) =>
      seq(
        token(seq("@", /[a-z_][a-zA-Z0-9_]*/)),
        optional(
          seq(
            "(",
            optional(seq($._attribute_item, repeat(seq(",", $._attribute_item)))),
            ")",
          ),
        ),
      ),

    // Positional, or named: `@rewrite(name="...", from="...")`.
    _attribute_item: ($) =>
      choice($._attribute_arg, seq($.identifier, "=", $._attribute_arg)),

    function_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional($.visibility_modifier),
        optional("effect"),
        "fn",
        $.function_name,
        optional($.generic_params),
        $.parameter_list,
        "->",
        $._type_expr,
        optional($.fallible_marker),
        optional(seq("=", $.expression)),
      ),

    // ADR-0009 / ADR-0012: `-> T!` is Result[T, String], `-> T!E` is
    // Result[T, E]; E is a named, possibly module-qualified, type.
    function_name: ($) =>
      choice(
        $.identifier,
        $.predicate_identifier,
        seq($.type_name, ".", choice($.identifier, $.predicate_identifier)),
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional(seq($.parameter, repeat(seq(",", $.parameter)))),
        optional(","),
        ")",
      ),

    // `self` is an ordinary identifier; the type annotation is optional for it.
    // Default arguments: `name: Type = expr`.
    parameter: ($) =>
      seq(
        optional("mut"),
        $.identifier,
        optional(seq(":", $._type_expr)),
        optional(seq("=", $.expression)),
      ),

    _type_expr: ($) =>
      choice(
        $.type_name,
        $.qualified_type,
        $.generic_type,
        $.option_type,
        $.function_type,
        $.record_type,
        $.tuple_type,
        $.unit_type,
        $.parenthesized_type,
      ),

    // A type from another module: `core.Usage`, `pkg.sub.Type`.
    _statement: ($) =>
      choice(
        $.let_statement,
        $.var_statement,
        $.guard_statement,
        $.assignment_statement,
        $.expression_statement,
      ),

    let_statement: ($) =>
      choice(
        // let x = expr  or  let _ = expr
        seq(
          "let",
          choice($.identifier, "_"),
          optional(seq(":", $._type_expr)),
          "=",
          $.expression,
        ),
        // let { a, b } = expr (record destructure)
        seq(
          "let",
          "{",
          seq($.identifier, repeat(seq(",", $.identifier))),
          optional(","),
          "}",
          "=",
          $.expression,
        ),
        // let (a, b) = expr (tuple destructure)
        seq(
          "let",
          "(",
          seq(
            choice($.identifier, "_"),
            repeat(seq(",", choice($.identifier, "_"))),
          ),
          ")",
          "=",
          $.expression,
        ),
      ),

    guard_statement: ($) =>
      choice(
        seq("guard", $.expression, "else", $._guard_else_body),
        seq(
          "guard",
          "let",
          $.identifier,
          "=",
          $.expression,
          "else",
          $._guard_else_body,
        ),
      ),

    _guard_else_body: ($) =>
      choice(
        "break",
        "continue",
        seq("ok", "(", $.expression, ")"),
        seq("err", "(", $.expression, ")"),
        $.expression,
      ),

    // Assignment: left side can be identifier, member access, or index access
    // We use prec.right(-1) so expression_statement is preferred when no "=" follows
    expression_statement: ($) => $.expression,

    // Expression: left-recursive postfix ops, binary/unary/pipe, match, variant_record, range, primary
    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.pipe_expression,
        $.compose_expression,
        $.call_expression,
        $.member_expression,
        $.optional_chain_expression,
        $.tuple_index_expression,
        $.index_expression,
        $.unwrap_expression,
        $.to_option_expression,
        $.unwrap_or_expression,
        $.match_expression,
        $.variant_record_expression,
        $.range_expression,
        $.primary_expression,
      ),

    primary_expression: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.heredoc_string,
        $.boolean_literal,
        $.unit_expression,
        $.identifier,
        $.predicate_identifier,
        $.type_name,
        $.list_expression,
        $.map_expression,
        $.record_expression,
        $.tuple_expression,
        $.if_expression,
        $.block_expression,
        $.for_in_expression,
        $.while_expression,
        $.fan_expression,
        $.fan_member,
        $.lambda_expression,
        $.some_expression,
        $.none_expression,
        $.ok_expression,
        $.err_expression,
        $.hole_expression,
        $.todo_expression,
        $.break_expression,
        $.continue_expression,
        $.parenthesized_expression,
        $.ascription_expression,
      ),

    // Decimal (with _ separators) and hex. No binary/octal in Almide.
    integer_literal: ($) =>
      token(choice(/[0-9][0-9_]*/, /0[xX][0-9a-fA-F][0-9a-fA-F_]*/)),

    // 3.14, 1_0.5, 1e9, 2.5E-3
    float_literal: ($) =>
      token(
        choice(
          /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9]+)?/,
          /[0-9][0-9_]*[eE][+-]?[0-9]+/,
        ),
      ),

    string_literal: ($) =>
      choice(
        seq(
          "\"",
          repeat(
            choice($.escape_sequence, $.string_interpolation, $.string_content),
          ),
          token.immediate("\""),
        ),
        $.single_quote_string,
        $.raw_string,
      ),

    // escapes only, no interpolation
    string_content: ($) => token.immediate(prec(1, /[^"\\$]+|\$|\\[^nrt"$\\xu]|\\/)),

    match_expression: ($) =>
      seq(
        "match",
        field("value", $._match_value),
        "{",
        repeat1(seq($.match_arm, optional(","))),
        "}",
      ),

    // A restricted expression for match values — everything EXCEPT variant_record_expression
    _match_value: ($) =>
      choice(
        $._match_binary,
        $._match_unary,
        $._match_pipe,
        $._match_compose,
        $._match_call,
        $._match_member,
        $._match_tuple_index,
        $._match_index,
        $._match_range,
        $._match_unwrap,
        $._match_to_option,
        $._match_coalesce,
        $._match_optional_chain,
        $.primary_expression,
      ),

    // Match-safe postfix and compound expressions that don't allow variant_record_expression
    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $.expression))),
        "=>",
        field("body", $.expression),
      ),

    block_expression: ($) =>
      seq(
        "{",
        repeat(seq($._statement, optional(";"))),
        optional($.expression),
        "}",
      ),


    call_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          $.expression,
          optional($.turbofish),
          $.argument_list,
        ),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($.argument, repeat(seq(",", $.argument)), optional(","))),
        ")",
      ),

    argument: ($) =>
      choice(seq($.identifier, ":", $.expression), $.expression),

    // member_expression: left-recursive via $.expression
    // Postfix ops `. () [] ! ? ?. ??` bind tighter than unary `not -`.
    binary_expression: ($) =>
      choice(
        prec.left(PREC.or, seq(field("left", $.expression), field("operator", "or"), field("right", $.expression))),
        prec.left(PREC.and, seq(field("left", $.expression), field("operator", "and"), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", "=="), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", "!="), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", "<"), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", ">"), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", "<="), field("right", $.expression))),
        prec.left(PREC.compare, seq(field("left", $.expression), field("operator", ">="), field("right", $.expression))),
        prec.left(PREC.add, seq(field("left", $.expression), field("operator", "+"), field("right", $.expression))),
        prec.left(PREC.add, seq(field("left", $.expression), field("operator", "-"), field("right", $.expression))),
        prec.left(PREC.multiply, seq(field("left", $.expression), field("operator", "*"), field("right", $.expression))),
        prec.left(PREC.multiply, seq(field("left", $.expression), field("operator", "/"), field("right", $.expression))),
        prec.left(PREC.multiply, seq(field("left", $.expression), field("operator", "%"), field("right", $.expression))),
        prec.right(PREC.power, seq(field("left", $.expression), field("operator", choice("^", "**")), field("right", $.expression))),
      ),

    pipe_expression: ($) =>
      prec.left(
        PREC.pipe,
        seq(
          field("left", $.expression),
          "|>",
          field("right", $._pipe_rhs),
        ),
      ),

    // The pipe RHS is a CLOSED postfix/compose chain (same technique as the
    // _match_* family): it never recurses through $.expression, so a binary
    // operator after it can only apply to the whole pipe — `xs |> f + ys`
    // parses as `(xs |> f) + ys`, exactly like the compiler.
    _pipe_rhs: ($) =>
      choice(
        $._pipe_compose,
        $._pipe_call,
        $._pipe_member,
        $._pipe_optional_chain,
        $._pipe_tuple_index,
        $._pipe_index,
        $._pipe_unwrap,
        $._pipe_to_option,
        $.pipe_match_expression,
        $.primary_expression,
      ),

    pipe_match_expression: ($) =>
      seq("match", "{", repeat1(seq($.match_arm, optional(","))), "}"),

    // f >> g — function composition; the tightest binary operator
    unwrap_or_expression: ($) =>
      prec.left(PREC.postfix, seq($.expression, "??", choice($._coalesce_fallback, $.variant_record_expression))),

    // Closed chain: the fallback is a single unary-level expression.
    _coalesce_fallback: ($) =>
      choice(
        $._coalesce_unary,
        $._pipe_call,
        $._pipe_member,
        $._pipe_optional_chain,
        $._pipe_tuple_index,
        $._pipe_index,
        $._pipe_unwrap,
        $._pipe_to_option,
        $.primary_expression,
      ),

    if_expression: ($) =>
      prec.right(seq(
        "if",
        field("condition", $.expression),
        "then",
        field("consequence", $._if_branch),
        optional(seq("else", field("alternative", $._if_branch))),
      )),

    // A branch may be an assignment, as in the compiler: `if c then x = 1 else ()`.
    _if_branch: ($) => choice($.expression, $.assignment_statement),

    pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.literal_pattern,
        $.identifier_pattern,
        $.some_pattern,
        $.none_pattern,
        $.ok_pattern,
        $.err_pattern,
        $.constructor_pattern,
        $.type_name_pattern,
        $.record_pattern,
        $.variant_record_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.as_pattern,
      ),

    // all @ [a, ..t] / c @ Circle(r) — bind the whole value and destructure it.
    // `@` here is the binder, distinct from the `@name` attribute token (which
    // is only lexed in declaration position, never after a pattern identifier).
    as_pattern: ($) =>
      prec.right(2, seq(
        field("name", $.identifier),
        "@",
        field("pattern", $.pattern),
      )),

    wildcard_pattern: ($) => prec(1, "_"),

    identifier_pattern: ($) => prec(1, $.identifier),

    literal_pattern: ($) =>
      prec(1, choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        seq("-", choice($.integer_literal, $.float_literal)),
      )),

    some_pattern: ($) => prec(1, seq("some", "(", $.pattern, ")")),

    constructor_pattern: ($) =>
      prec(1, seq(
        $.type_name,
        "(",
        optional(seq($.pattern, repeat(seq(",", $.pattern)))),
        ")",
      )),

    // Match { scope, regex } or Match { scope, .. } or Match { .. }
    list_pattern: ($) =>
      prec(1, seq(
        "[",
        optional(choice(
          seq(
            $.pattern,
            repeat(seq(",", $.pattern)),
            optional(seq(",", $.rest_pattern)),
          ),
          $.rest_pattern,
        )),
        "]",
      )),

    // `..` (rest ignored) or `..name` (rest bound to a List)
    rest_pattern: ($) => seq("..", optional(field("name", $.identifier))),

    // ── Terminals ──

    identifier: ($) => /[a-z_][a-zA-Z0-9_]*/,

    type_name: ($) => /[A-Z][a-zA-Z0-9_]*/,
  },
});
